# adso3066478

./: README.md  comando SQL postgres.py  from pymongo import MongoClient.py  package-lock.json  package.json  pyvenv.cfg  requirements.txt
JavaScript/: buclefor.js  buclewhile.js  cajero.js  calculadora.js  ciclofor.js  condicionales.js  diccionario.js  funciones.js  hola.js  ifelse.js  index.html  interaccion.js  leyohm.js  lista.js  operaciones.js  tabladeverdad.js  variables.js
administrador/: pruebanum.py  views.py
conexionDjango/: MongoDB-Django.py  MySQL-Django.py  postgres-Django.py
cpp/: buclefor.cpp  buclewhile.cpp  cajero.cpp  ciclofor.cpp  condicional.cpp  condicionalifelse.cpp  diccionario.cpp  funciones.cpp  holamundo.cpp  interaccionusuario.cpp  leyohm.cpp  listas.cpp  operaciones.cpp  tabladeverdad.cpp  variables.cpp
desarrollo de modulos/: requirements.txt
examenfinal/: SQL.py
flaskAPI/: database.py
go/: buclefor.go  buclewhile.go  cajero.go  ciccionario.go  ciclofor.go  condicionales.go  condicionalifelse.go  funciones.go  holamundo.go  interacciondeusuario.go  leyohm.go  listas.go  operaciones.go  tablaceverdad.go  variables.go
guiacppmongo/ProyectoMongoDB/src/: CMakeLists.txt  main.cpp
guiacppmongo/ProyectoMongoDB/src/include/: MongoDBConnection.h
java/: buclefor.java  buclewhile.java  cajero.java  ciclofor.java  condicional.java  condicionalesifelse.java  diccionario.java  funciones.java  holamundo.java  interaccionusuario.java  leyohm.java  listas.java  operaciones.java  tabladeverdad.java  variables.java
php/: buclefor.php  (+15 more)
(+103 files in other folders)
